Ensure overlay covers backdrop

--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -632,10 +632,10 @@ section.forecast .day .overlay-popup {
   align-items: center;
   backdrop-filter: blur(3px);
   font-weight: bold;
-  height: 100%;
+  height: 105%;
   width: 100%;
   top: 100%;
-  color: var(--fade-top);
+  color: white;
   text-align: center;
   text-shadow: 2px 2px 5px var(--body-text);
   background-color: rgba(0, 0, 0, 0.3);
